--- a/design.css
+++ b/design.css
@@ -4,8 +4,8 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 02.05.2018, 08:24:09
-    Author     : ITSE20RohlederM
+    Created on : 03.06.2020
+    Author     : Anedhel
 */
 
 /* Allgemeines Seitendesign */
