--- a/design.css
+++ b/design.css
@@ -124,7 +124,7 @@ h5{
 /* Ende Allgemeines Text, Headline & Linkdesign */
 
 /* Design long pages */
-.betweem{
+.between{
     /* Erstellt Farbige Balken zwsichen den Hobby Artikeln */
     background-color: #dddddd;
 }
