changed footer color to match header's one
#7F6B55 to #022625
brown-dark ain't really good imo.

--- a/design.css
+++ b/design.css
@@ -144,7 +144,7 @@ footer{
     font-style:italic;
     font-size:120%;
     text-shadow: 1px 0.5px grey;
-    background-color: #7F6B55;
+    background-color: #022625;
 }
 /* Ende Allgemeines Seitendesign */
 
