new header color #12615E
this one seems better #12615E

--- a/design.css
+++ b/design.css
@@ -14,7 +14,7 @@ header{
     text-shadow: 1px 0.5px grey;
     font-style: italic;
     word-spacing: 20px;
-    background-color: #022625;
+    background-color: #12615E;
 }
 
 /*dropdown Button*/
