--- a/design.css
+++ b/design.css
@@ -120,7 +120,7 @@ body{
 .block {
     background-color: rgba(255, 255, 255, 0.5);
     padding: 35px;
-    width: 71%;
+    width: 70%;
     margin: 0 auto;
     margin-bottom: 1.5%;
     margin-top: 1.5%;
@@ -210,7 +210,7 @@ aside{
     font-size: 225%;
     margin-top: 1.5%;
     width: 200px;
-    margin-bottom: -60px;
+    margin-bottom: -2.5%;
     padding: 6px;
     z-index: 2;
     box-shadow: 4px 8px 16px 0px rgba(0,0,0,0.4);
