--- a/design.css
+++ b/design.css
@@ -37,7 +37,19 @@ header{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 4;
     margin-left: -100px;
+    overflow-y: scroll;
+    height: 400%;
 }
+
+/*Scroll Bar Style !*/
+::-webkit-scrollbar { 
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #666;
+}
+
 .dropcontent a {
     /* links in the drop */
     color: black;
@@ -110,8 +122,12 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
 .title-block {
     text-align: left;
     padding-bottom: 15px;
@@ -195,12 +211,25 @@ h5{
 }
 aside{
     /* Setze die Seitliche Navigation */
-    background-color: #ffe9e9;
+    background-color: #bbb;
     position: fixed;
-    border: #eed8d8;
+    border: #17202a;
     border-style:groove;
     flex-direction: column;
+    margin-left: 10px;
+    overflow-y: scroll;
 }
+
+aside a {
+    display: block;
+    padding: 4px;
+    margin: 0px;
+}
+
+aside a:hover {
+    background-color: #aaa;
+}
+
 .invisLink{
     /* macht die zwischentext Links weniger auffällig */
     color: black;
