--- a/design.css
+++ b/design.css
@@ -165,6 +165,7 @@ footer{
     font-size:120%;
     text-shadow: 1px 0.5px grey;
     background-color: #17202a;
+    color: white
 }
 /* Ende Allgemeines Seitendesign */
 
