--- a/design.css
+++ b/design.css
@@ -257,4 +257,22 @@ aside a:hover {
 #impressum{
     font-family: times;
 }
-/* Design Impressum*/
+/* End Design Impressum*/
+
+/*Design Hoverable Sidenav*/
+#Sidenav a {
+    position: absolute; /* Position relative to the browser window*/
+    left: -80px;    /*having them outside the screen, so they are hidden normally*/
+    transition: 0.3;    /*adds transition to the hover*/
+    padding: 15px;  
+    width: 100px;
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    border-radius: 0 5px 5px 0; /*rounded corners on top and bottom right*/
+}
+
+#Sidenav a:hover {
+    left: 0; /*moves them into screen when hovered*/
+}
+/*End Hoverable Sidenav*/
