fixed an error about the background color

--- a/design.css
+++ b/design.css
@@ -277,29 +277,29 @@ aside a:hover {
 }
 #explanationhover {
     top:20px
-    background-color: #17202a /*Header Background Color*/
+    background: #17202a /*Header Background Color*/
 #generalhover {
     top:80px
-    background-color: #17202a /*Header Background Color*/
+    background: #17202a /*Header Background Color*/
 #pvphover {
     top:140px
-    background-color: #17202a /*Header Background Color*/
+    background: #17202a /*Header Background Color*/
 #gearhover {
     top:200px
-    background-color: #17202a /*Header Background Color*/
+    background: #17202a /*Header Background Color*/
 #huntinghover {
     top:260px
-    background-color: #17202a /*Header Background Color*/
+    background: #17202a /*Header Background Color*/
 #generalwarhover {
     top:320px
-    background-color: #17202a /*Header Background Color*/
+    background: #17202a /*Header Background Color*/
 #civilwarhover {
     top:380px
-    background-color: #17202a /*Header Background Color*/
+    background: #17202a /*Header Background Color*/
 #expansionhover {
     top:440px
-    background-color: #17202a /*Header Background Color*/
+    background: #17202a /*Header Background Color*/
 #discordhover {
     top:500px
-    background-color: #17202a /*Header Background Color*/
+    background: #17202a /*Header Background Color*/
 /*End Hoverable Sidenav*/
