--- a/design.css
+++ b/design.css
@@ -277,38 +277,38 @@ aside a:hover {
 }
 #explanationhover {
     top:20px
-    background: #17202a /*Header Background Color*/
+    background: #17202A /*Header Background Color*/
 }
 #generalhover {
     top:80px
-    background: #17202a /*Header Background Color*/
+    background: #17202A /*Header Background Color*/
 }
 #pvphover {
     top:140px
-    background: #17202a /*Header Background Color*/
+    background: #17202A /*Header Background Color*/
 }
 #gearhover {
     top:200px
-    background: #17202a /*Header Background Color*/
+    background: #17202A /*Header Background Color*/
 }
 #huntinghover {
     top:260px
-    background: #17202a /*Header Background Color*/
+    background: #17202A /*Header Background Color*/
 }
 #generalwarhover {
     top:320px
-    background: #17202a /*Header Background Color*/
+    background: #17202A /*Header Background Color*/
 }
 #civilwarhover {
     top:380px
-    background: #17202a /*Header Background Color*/
+    background: #17202A /*Header Background Color*/
 }
 #expansionhover {
     top:440px
-    background: #17202a /*Header Background Color*/
+    background: #17202A /*Header Background Color*/
 }
 #discordhover {
     top:500px
-    background: #17202a /*Header Background Color*/
+    background: #17202A /*Header Background Color*/
 }
 /*End Hoverable Sidenav*/
