Fixed Sidenav not hovering (made some weird shit the last commits)

--- a/design.css
+++ b/design.css
@@ -272,7 +272,7 @@ aside a:hover {
   border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
 }
 
-#mySidenav a:hover {
+#Sidenav a:hover {
   left: 0; /* On mouse-over, make the elements appear as they should */
 }
 
