--- a/design.css
+++ b/design.css
@@ -111,6 +111,81 @@ header{
     font-family: times;
 }
 /* END design mainpage button */
+
+/*Carousel-Slides*/
+
+#slider {
+    margin: 0;
+    width: 100%;
+    text-align: center;
+}
+#slider input[type=radio]{
+    display: none;
+}
+#slider label {
+    cursor: pointer;
+    text-decoration: none;
+}
+#slides {
+    position: relative;
+    z-index: 2;
+}
+#overflow {
+    width: 100%;
+    overflow: hidden;
+}
+#slide1:checked ~ #slides .inner {
+    margin-left: 0;
+}
+#slide2:checked ~ #slides .inner {
+    margin-left: -100%;
+}
+#slide3:checked ~ #slides .inner {
+    margin-left: -200%;
+}
+#slides .inner {
+    transition: margin-left 800ms;
+    width: 400%;
+    line-height: 0;
+    height: 90%;
+}
+#slides .slide {
+    width: 25%;
+    float: left;
+    display: block;
+    height: 100%;
+    color: #fff;
+}
+.slide-content img {
+    height: 750px;
+    width: 100%;
+    object-fit: cover;
+}
+#bullets {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 48%;
+}
+#bullets label {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border-radius: 100%;
+    background-color: #ddd;
+    margin: 0 10px;
+}
+#bullets label:hover {
+    background-color: #eee;
+    transition: 0.3s;
+}
+#slide1:checked ~ #bullets label:nth-child(1),
+#slide2:checked ~ #bullets label:nth-child(2),
+#slide3:checked ~ #bullets label:nth-child(3) {
+    background-color: #fff;
+}
+/*END CAROUSEL!!!*/
+/*Main Page*/
 main{
     text-align: center; 
     font-family:times;
