--- a/design.css
+++ b/design.css
@@ -40,7 +40,17 @@ header{
     overflow-y: scroll;
     height: 400%;
 }
-
+ul {
+    position: relative;
+    display: inline-block;
+    padding: 16px;
+    padding-right: 4%;
+    padding-left: 4%;
+    list-style-type: none;
+}
+li {
+    margin: 50px;
+}
 /*Scroll Bar Style !*/
 ::-webkit-scrollbar { 
     width: 5px;
@@ -110,6 +120,14 @@ header{
     font-weight: bold;
     font-family: times;
 }
+.collumn {
+    display: block;
+}
+.btn {
+    padding: 24px;
+    margin: 50px;
+    background-color: #233040;
+}
 /* END design mainpage button */
 
 /*Carousel-Slides*/
@@ -143,6 +161,9 @@ header{
 #slide3:checked ~ #slides .inner {
     margin-left: -200%;
 }
+#slide4:checked ~ #slides .inner {
+    margin-left: -300%;
+}
 #slides .inner {
     transition: margin-left 800ms;
     width: 400%;
@@ -165,7 +186,7 @@ header{
     text-align: center;
     position: absolute;
     bottom: 0;
-    left: 48%;
+    left: 47%;
 }
 #bullets label {
     display: inline-block;
@@ -182,7 +203,8 @@ header{
 
 #slide1:checked ~ #bullets label.lab1,
 #slide2:checked ~ #bullets label.lab2,
-#slide3:checked ~ #bullets label.lab3 {
+#slide3:checked ~ #bullets label.lab3,
+#slide3:checked ~ #bullets label.lab4 {
     background-color: green;
 }
 input:checked {
@@ -198,7 +220,7 @@ main{
 }
 body{
     margin: 0px;
-    background-image: url("background.jpg");
+    background-image: url("img/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -232,6 +254,7 @@ html {
     display: inline-block;
     margin-left: 8%;
     margin-right: 8%;
+    vertical-align:top;
 }
 
 footer{
@@ -278,6 +301,14 @@ h5{
     font-size: 20px;
 }
 
+.cover {
+  width: 260px;
+  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+  display: block; /* remove extra space below image */
+}
+
 /* Ende Allgemeines Text, Headline & Linkdesign */
 
 /* Design long pages */
@@ -291,22 +322,21 @@ h5{
     font-family: times;
 }
 .artcl-container{
-    width: 95%;
-    height: 500px;
-    margin: auto;
-    padding: 10px;
+    width:97%; 
+    background-color:green; 
+    padding-top:20px; 
+    padding-left:15px; 
+    padding-right:15px;
 }
 .artcl-left {
-    margin-left: 5%;
-    margin-top: 3%;
-    width: 55%;
-    float: left;
-    font-size: 24px;
+    width:55%;  
+    background-color:white; 
+    border:solid black;
+    font-size: 17px;
 }
 .artcl-right {
     width: 30%;
     height: auto;
-    float: right;
     margin: 0;
     background-color: rgba(255, 255, 255, 0.2);
 }
